Change some things from API and give functionality to Login and the authorization system to Angular App Also, update README.md

--- a/Angular App/transparentcdn/src/app/app.component.html
+++ b/Angular App/transparentcdn/src/app/app.component.html
@@ -1,8 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar color="primary">
-  <span>TransparentCDN App</span>
-</mat-toolbar>
-
 <!--<app-login></app-login>-->
-<app-books-list></app-books-list>
+<!--<app-books-list></app-books-list>-->
 <router-outlet></router-outlet>
