--- a/Angular App/transparentcdn/src/app/books-list/books-list.component.html
+++ b/Angular App/transparentcdn/src/app/books-list/books-list.component.html
@@ -1,13 +1,27 @@
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span>TransparentCDN App</span>
+        <span class="example-spacer"></span>
+        <button mat-button>
+            <mat-icon class="example-icon" (click)="logout()">exit_to_app</mat-icon>
+        </button>
+    </mat-toolbar-row>
+</mat-toolbar>
 <mat-list>
-  <h3 mat-subheader style="float: left;">Books List</h3>
-  <button style="float: right;" mat-raised-button (click)="openDialog()"><mat-icon style="color: green;">add</mat-icon> Add Book</button>
-  <br><br><br>
-  <!-- Books List -->
-  <mat-list-item *ngFor="let book of books" class="hover-color">
-    <mat-icon (click)="openDetailDialog(book['id'], book['ISBNCode'], book['title'], book['author'])" class="pointer" mat-list-icon>book</mat-icon>
-    <h3 mat-line> Title: {{book['title']}} </h3>
-    <h5 mat-line> Author: {{book['author']}} </h5>
-    <p mat-line> ISBN Code: {{book['ISBNCode']}} </p>
-    <button mat-button (click)="openDeleteDialog(book['id'])"><mat-icon style="color: red;">delete</mat-icon></button>
-    <mat-divider></mat-divider>
-  </mat-list-item>
+    <h3 mat-subheader style="float: left;">Books List</h3>
+    <button *ngIf="isAdmin" style="float: right;" mat-raised-button (click)="openDialog()">
+        <mat-icon style="color: green;">add</mat-icon> Add Book
+    </button>
+    <br><br><br>
+    <!-- Books List -->
+    <mat-list-item *ngFor="let book of books" class="hover-color">
+        <mat-icon (click)="openDetailDialog(book['id'], book['ISBNCode'], book['title'], book['author'])" class="pointer"
+            mat-list-icon>book</mat-icon>
+        <h3 mat-line> Title: {{book['title']}} </h3>
+        <h5 mat-line> Author: {{book['author']}} </h5>
+        <p mat-line> ISBN Code: {{book['ISBNCode']}} </p>
+        <button *ngIf="isAdmin" mat-button (click)="openDeleteDialog(book['id'])">
+            <mat-icon style="color: red;">delete</mat-icon>
+        </button>
+        <mat-divider></mat-divider>
+    </mat-list-item>
