--- a/Angular App/transparentcdn/src/app/books-list/dialogs/dialog-remove-book-modal.html
+++ b/Angular App/transparentcdn/src/app/books-list/dialogs/dialog-remove-book-modal.html
@@ -1,7 +1,10 @@
-<h1 mat-dialog-title>
-    <mat-icon>book</mat-icon>Are you sure to delete the {{data.id}} - Book ??
+<h1 mat-dialog-title *ngIf="data.title && data.bookid">
+    <mat-icon>book</mat-icon>  Are you sure to delete the "{{data.title}}" - Book ??
+</h1>
+<h1 mat-dialog-title *ngIf="data.bookid && !data.title">
+    <mat-icon>book</mat-icon>  Are you sure give back this "{{data.bookid}}" - Book ??
 </h1>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="data.id" cdkFocusInitial>Ok</button>
+    <button mat-button [mat-dialog-close]="data.bookid" cdkFocusInitial>Ok</button>
 </div>
